# sine-wave-generator

./: .gitignore  README.md  generate_sine.py  generate_sine_stream.py  main.py  pyproject.toml  requirements.txt  sine_wave_generator.py
sine_wave_generator/: __init__.py  main.py  sine_wave_generator.py
sinewavegenerator/: main.py  sine_wave_generator.py
