[tool.poetry]
name = "sinewavegenerator"
version = "0.1.0"
description = "Generate sine waves as .wav files or audio stream"
authors = ["Kasper Nyhus <kanyhus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaudio = "^0.2.14"
numpy = "^2.2.2"
scipy = "^1.15.1"

[tool.poetry.scripts]
sine = "sinewavegenerator.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
